--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "mongodb": "^5.6.0"
-  }
+  "license": "ISC"
 }
