--- a/packages/api/.env
+++ b/packages/api/.env
@@ -1,1 +1,1 @@
-atlas_uri="mongodb+srv://admin:adminpassword@fullstacktodoproject.sui8wmo.mongodb.net/?retryWrites=true&w=majority"
+ATLAS_URI="mongodb+srv://admin:adminpassword@fullstacktodoproject.sui8wmo.mongodb.net/?retryWrites=true&w=majority"
